GNOME Bugzilla – Bug 731141
Fix a missing g_free() in error path
Last modified: 2014-07-23 08:10:23 UTC
Created attachment 277779 [details] [review] Fix a missing g_free This fixes a memory leak with g_strdup() when an error occurs.
commit 4c488d425d2dfb3dbb7225aa55b0425050f0531b Author: Kazunori Kobayashi <kkobayas@igel.co.jp> Date: Thu Jun 27 21:59:29 2013 +0900 omx: Fix a missing g_free() in error path This fixes a memory leak with g_strdup() when an error occurs. https://bugzilla.gnome.org/show_bug.cgi?id=731141